[package]
name = "hangmanrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.9"
rand = "0.8.0"
ansi_term = "0.12"
serde = { version = "1.0.147", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking", "json"] }